--- a/index.html
+++ b/index.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
+
+<head>
+  <meta charset="UTF-8">
+  <title>Random Quote Generator - Suicide Buddies</title>
+  
+  
+  
+      <link rel="stylesheet" href="css/style.css">
+
+  
+</head>
+
+<body>
+
+  <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Suicide Buddies Podcast Quote of the Day</title>
+	<link rel="stylesheet" href="quote.css">
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+	<script src="jquery-1.11.2.min.js" type="text/javascript"></script>
 </head>
 <body>
-	<p>Hello world!</p>
+	<div id="container">
+		<h2>Suicide Buddies is a great podcast.</h2>
+			<div id="quoteContainer">
+				<p></p>
+				<p id="quoteGenius"></p>			
+			</div><!--end quoteContainer-->
+			
+			<div id="buttonContainer">
+				<a href="#" id="quoteButton">Quote Me</a>
+		</div><!--end buttonContainer-->
+
+     <a href="https://itunes.apple.com/us/podcast/suicide-buddies/id1308812097?mt=2" target="_blank"><img src="https://res.cloudinary.com/mtv1243/image/upload/v1550852655/water-glass.png" alt=""></a>
+    <p class="directions">Click to stay hydrated!</p>
+
+    <footer>
+    <p>page by <a href="https://www.mylesaustin.com" target="_blank">myles</a>, quote generator code by <a href="https://codepen.io/kkoutoup/" target="_blank">kostas</a></p>
+    <p></p>
+  </footer>
+    
+	</div><!--end container-->
+  
 </body>
+</html>
+  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+  
+
+    <script  src="js/index.js"></script>
+
+
+
+
+</body>
+
 </html>
